add oauth2 client credentials example