@@ -15,7 +15,7 @@ import org.springframework.web.util.UriComponentsBuilder;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
-import java.util.List;
+import java.util.Collections;
 
 @Slf4j
 @RestController
@@ -36,7 +36,7 @@ public class PetRestController {
     public PetDto getPet(@PathVariable("petId") @Valid @NotNull String petId) {
         log.debug("REST request to get Pet: {}.", petId);
         return petService.getPet(petId)
-                .orElseThrow(() -> new BadRequestException("entity.pet.idnotexists", List.of(petId)));
+                .orElseThrow(() -> new BadRequestException("entity.pet.idnotexists", Collections.singletonList(petId)));
     }
 
     @PostMapping
@@ -44,7 +44,7 @@ public class PetRestController {
         log.debug("REST request to save Pet: {}.", petDto);
 
         if (StringUtils.isEmpty(petDto.getId())) {
-            throw new BadRequestException("entity.pet.idexists", List.of(petDto.getId()));
+            throw new BadRequestException("entity.pet.idexists", Collections.singletonList(petDto.getId()));
         }
 
         PetDto result = petService.savePet(petDto);
